--- a/自用DIRECT规则.yaml
+++ b/自用DIRECT规则.yaml
@@ -3,3 +3,6 @@ payload:
   # - DOMAIN-KEYWORD,steamserver
   # - AND,((DOMAIN-KEYWORD,steamserver),(DST-PORT,443))
   - DOMAIN-KEYWORD,steamcdn
+
+  # 苹果推送
+  - DOMAIN-SUFFIX,push.apple.com
