--- a/自用DIRECT规则.yaml
+++ b/自用DIRECT规则.yaml
@@ -1,6 +1,6 @@
 payload:
   # steam下载直连
-  # - DOMAIN-KEYWORD,steamserver
+  - DOMAIN-KEYWORD,steamserver
   # - AND,((DOMAIN-KEYWORD,steamserver),(DST-PORT,443))
   - DOMAIN-KEYWORD,steamcdn
 
