--- a/.github/workflows/gfwlist.yml
+++ b/.github/workflows/gfwlist.yml
@@ -1,3 +1,5 @@
+# 文件名: .github/workflows/build-gfwlist.yml (或您自定义的文件名)
+
 name: Build GFWList
 
 on:
@@ -15,12 +17,13 @@ jobs:
       - name: Set variables
         run: |
           echo "RELEASE_NAME=GFWList Released on $(date +%Y%m%d%H%M)" >> $GITHUB_ENV
+          echo "RELEASE_TAG=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
 
       - name: Checkout repository
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
 
       - name: Checkout gfwlist2dnsmasq
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
         with:
           repository: cokebar/gfwlist2dnsmasq
           path: gfwlist2dnsmasq
@@ -52,6 +55,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           release_name: ${{ env.RELEASE_NAME }}
+          tag: ${{ env.RELEASE_TAG }} # 使用动态生成的唯一 tag
           make_latest: true
           file_glob: true
           file: ./publish/*
@@ -65,7 +69,7 @@ jobs:
           git checkout -b release
           git add .
           git commit -m "${{ env.RELEASE_NAME }}"
-          git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+          git remote add origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
           git push -f -u origin release
 
       - name: Purge jsdelivr CDN
